# git-auto-sync

./: .gitignore  README.md  config.example.toml  install.ps1  install.sh  pyproject.toml  release.md
.claude/commands/: release.md
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-07-13-tracked-ignored-files-design.md
git_auto_sync/: cli.py  config.py  display.py  doctor.py  engine.py  git_ops.py  models.py  path_policy.py  release.py  repo_runtime.py  wizard.py
git_auto_sync/notifiers/: __init__.py  base.py  lark.py  log.py  telegram.py
git_auto_sync/prompts/: commit.md  staging.md
git_auto_sync/providers/: __init__.py  anthropic_api.py  base.py  claude_cli.py  rules.py
git_auto_sync/scheduler/: __init__.py  cron.py  launchd.py  systemd.py  windows.py
scripts/: release-package.sh
tests/: conftest.py  test_ci_workflow.py  test_cli.py  test_config.py  test_display.py  test_doctor.py  test_engine.py  test_git_ops.py  test_install_script.py  test_notifiers.py  test_path_policy.py  test_provider_factory.py  test_release.py  test_rules_provider.py  test_scheduler.py  test_windows_installer.py  test_wizard.py
