[project]
name = "git-auto-sync"
version = "0.2.0"
description = "Scheduled multi-repo auto-commit and sync with AI commit messages and notifications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kingson Wu" }]
keywords = ["git", "automation", "commit", "sync", "launchd", "cron"]
dependencies = [
    "requests>=2.28",
]

[project.scripts]
git-auto-sync = "git_auto_sync.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["git_auto_sync*"]

[tool.setuptools.package-data]
git_auto_sync = ["prompts/*.md"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
